--- a/readme.me
+++ b/readme.me
@@ -1,3 +1,5 @@
 # learn-puppeteer
 
-This repository is my research of puppeteer, not for public use.
+This repository is my research of puppeteer.
+
+For more details, please see the article about puppeteer at [Hexoder](https://hexoder.com).
